# nn_fund_management

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  __manifest__.py  docker-compose.override.yml  docker-compose.prod.yml  hooks.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
api/: main.py
controllers/: main.py
data/: cron_data.xml  demo_data.xml  security_data.xml  sequence_data.xml
docker/: Dockerfile  entrypoint.sh  nginx.local.conf  odoo.conf  wait-for-psql.py
docs/: API.md  ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  FINANCIAL_INTEGRITY.md  INTERVIEW_GUIDE.md  SECURITY.md  TROUBLESHOOTING.md
models/: __init__.py  approval_history.py  approval_matrix.py  approval_rule.py  audit_log.py  bank_email_parser.py  dashboard.py  expense_head.py  fund_account.py  fund_allocation.py  fund_bill.py  fund_ledger.py  fund_requisition.py  fund_transfer.py  incoming_fund.py  ledger_reconciliation.py  notification_mixin.py  project.py  res_company.py  res_partner.py  res_users.py  security_mixin.py
nginx/: nginx.conf
scripts/: backup.sh  health_check.py  restore.sh  run_coverage.ps1
security/: ir.model.access.csv  record_rules.xml  security_groups.xml  security_hardening.xml
tests/: __init__.py  test_allocation_extended.py  test_api_model.py  test_approval_matrix.py  test_approval_rule.py  test_bank_email.py  test_bank_email_extended.py  test_concurrency.py  test_dashboard.py  test_financial_integrity.py  test_full_workflow.py  test_fund_management.py  test_incoming_fund.py  test_ledger_extended.py  test_ledger_reconciliation.py  test_project_expense.py  test_reconciliation_extended.py  test_security_mixin.py
views/: approval_history_views.xml  approval_matrix_views.xml  approval_rule_views.xml  audit_log_views.xml  bank_email_views.xml  dashboard_views.xml  expense_head_views.xml  fund_account_views.xml  fund_allocation_views.xml  fund_bill_views.xml  fund_ledger_views.xml  fund_requisition_views.xml  fund_transfer_views.xml  incoming_fund_views.xml  ledger_reconciliation_views.xml  login_views.xml  menus.xml  project_views.xml  report_views.xml
